syntax = "proto3";

option java_package = "at.fhv.sysarch.lab2.ordermanager";
option java_multiple_files = true;
option java_outer_classname = "OrderProto";

message OrderRequest {
  string name = 1;
  int32 amount = 2;
}

message OrderReply {
  string name = 1;
  int32 amount = 2;
  double unitPrice = 3;
  double totalPrice = 4;
}
message Item {
  string name = 1;
  int32 amount = 2;
  double price = 3;
}

service OrderService {
  rpc PlaceOrder (OrderRequest) returns (OrderReply);
}